<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySensorHumidity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:context=".ActivitySensorHumidity">

        <TextView
            android:id="@+id/sensor_humidity_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/humidity_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sensor_humidity_img_ring"
            android:layout_width="235dp"
            android:layout_height="235dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/meter_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_tv_title"
            app:srcCompat="@drawable/ring_m" />

        <TextView
            android:id="@+id/sensor_humidity_tv_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_number"
            android:textSize="96sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/sensor_humidity_img_ring"
            app:layout_constraintEnd_toEndOf="@+id/sensor_humidity_img_ring"
            app:layout_constraintStart_toStartOf="@+id/sensor_humidity_img_ring"
            app:layout_constraintTop_toTopOf="@+id/sensor_humidity_img_ring" />

        <TextView
            android:id="@+id/sensor_humidity_tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_unit"
            app:layout_constraintEnd_toEndOf="@+id/sensor_humidity_tv_val"
            app:layout_constraintStart_toStartOf="@+id/sensor_humidity_tv_val"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_tv_val" />

        <TextView
            android:id="@+id/sensor_humidity_tv_quality_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/quality"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sensor_humidity_btn"
            app:layout_constraintEnd_toStartOf="@+id/settings_guideline"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_img_ring" />

        <TextView
            android:id="@+id/sensor_humidity_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mp_quality_blank"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/sensor_humidity_tv_quality_label"
            app:layout_constraintStart_toStartOf="@+id/settings_guideline"
            app:layout_constraintTop_toTopOf="@+id/sensor_humidity_tv_quality_label"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/settings_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <Button
            android:id="@+id/sensor_humidity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/btn_measure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_img_ring" />

        <TextView
            android:id="@+id/sensor_humidity_tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_cb_automatic" />

        <CheckBox
            android:id="@+id/sensor_humidity_cb_automatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatic"
            android:textSize="14sp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_humidity_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

