<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/empty_divider"
            app:showDividers="middle">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_btn_particles"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_1"
                android:drawableStart="@mipmap/ic_launcher_foreground"
                android:padding="10dp"
                android:text="@string/main_measure_particles"
                android:textSize="24sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_btn_gas"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_1"
                android:drawableStart="@mipmap/gasglp_foreground"
                android:padding="10dp"
                android:text="@string/main_measure_gas"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_btn_humidity"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_1"
                android:drawableStart="@mipmap/humidade_foreground"
                android:padding="10dp"
                android:text="@string/main_measure_humidity"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>