<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySensorGas">

    <TextView
        android:id="@+id/descr_val_s2"
        android:layout_width="343dp"
        android:layout_height="209dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="48dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/medir_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="mostraVal2"
        android:text="@string/button_measure"
        app:layout_constraintEnd_toEndOf="@+id/ring_s2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/ring_s2"
        app:layout_constraintTop_toBottomOf="@+id/ring_s2" />

    <ImageView
        android:id="@+id/ring_s2"
        android:layout_width="235dp"
        android:layout_height="241dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/title_s2"
        app:layout_constraintStart_toStartOf="@+id/title_s2"
        app:layout_constraintTop_toBottomOf="@+id/title_s2"
        app:srcCompat="@drawable/ring_m" />

    <TextView
        android:id="@+id/textview_valor_s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_number"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="@+id/ring_s2"
        app:layout_constraintEnd_toEndOf="@+id/ring_s2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/ring_s2"
        app:layout_constraintTop_toTopOf="@+id/ring_s2" />

    <TextView
        android:id="@+id/title_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gas_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>